--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,7 +10,9 @@
     <title>{{ .Title }}</title>
   </head>
   <body>
-    {{- block "main" . }}{{- end }}
+    <div class="container">
+      {{- block "main" . }}{{- end }}
     <script src='{{ absURL "/main.js" }}'></script>
+    </div>
   </body>
 </html>
