Refactor container to use new responsive-block

--- a/src/container.scss
+++ b/src/container.scss
@@ -3,20 +3,19 @@ p {
 }
 
 .container {
-  @media only screen and (max-width: map-get($screen-breakpoints, 'mobile')) {
+  @include responsive-block('mobile') {
     margin-left: 1rem;
     margin-right: 1rem;
     width: map-get($screen-widths, 'mobile');
   }
 
-  @media only screen and (max-width: map-get($screen-breakpoints, 'tablet'))
-    and (min-width: (map-get($screen-breakpoints, 'mobile') + 1)) {
+  @include responsive-block('tablet') {
     margin-left: auto;
     margin-right: auto;
     width: map-get($screen-widths, 'tablet');
   }
 
-  @media only screen and (min-width: (map-get($screen-breakpoints, 'tablet') + 1)) {
+  @include responsive-block('desktop') {
     margin-left: auto;
     margin-right: auto;
     width: map-get($screen-widths, 'desktop');
