--- a/src/index.scss
+++ b/src/index.scss
@@ -3,5 +3,8 @@
 // Theme Systemization
 @import 'theme/screens';
 
+// Mixins
+@import 'mixins/responsive-block';
+
 // Modules
 @import 'container';
