--- a/src/modules/container.scss
+++ b/src/modules/container.scss
@@ -2,7 +2,7 @@ p {
   background-color: blueviolet;
 }
 
-.container {
+%container {
   @include responsive-block('mobile') {
     margin-left: 1rem;
     margin-right: 1rem;
