Add colors and spaces (margins) systemization and Lior's reset.scss

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,9 +2,13 @@
 
 // Theme Systemization
 @import 'theme/screens';
+@import 'theme/spaces';
+@import 'theme/colors';
 
 // Mixins
 @import 'mixins/responsive-block';
+
+@import 'base/reset';
 
 // Modules
 @import 'modules/container';
