Add markup header with nav

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,17 @@
 {{ define "main" }}
-<p>
-  PlaceHolder
-</p>
+<header class='navbar-wrapper'>
+  <nav class='navbar'>
+    <ul class='navbar-navigation'>
+      <li class='navbar-navigation-item navbar-navigation-item-active'>
+        <a>Site Name</a>
+      </li>
+      <li class='navbar-navigation-item navbar-navigation-item-active'>
+        Section Name!
+      </li>
+      <li class='navbar-navigation-item'>
+        Current article name very lonk
+      </li>
+    </ul>
+  </nav>
+</header>
 {{ end }}
