--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -2,6 +2,7 @@
   // Colors prefixed with b are for backgrounds.
   // Colors prefixed with f are for foregrounds.
   --color-primary-b500: hsl(220, 55%, 60%);
+  --color-primary-f300: hsl(220, 55%, 85%);
   --color-primary-f400: hsl(220, 60%, 90%);
   --color-primary-f500: hsl(220, 65%, 95%);
   --color-primary-f600: hsl(220, 70%, 98%);
