--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,6 +10,7 @@
     <title>{{ .Title }}</title>
   </head>
   <body>
+    {{ partial "header.html" . }}
     {{- block "main" . }}{{- end }}
   </div>
   </body>
