--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,6 +12,7 @@
   <body>
     {{ partial "header.html" . }}
     {{- block "main" . }}{{- end }}
+    {{ partial "footer.html" . }}
   </div>
   </body>
 </html>
