Add 900 space var above previous max 800

--- a/src/theme/spaces.scss
+++ b/src/theme/spaces.scss
@@ -12,4 +12,5 @@
   @include create-space-variable('600', 6rem);
   @include create-space-variable('700', 8rem);
   @include create-space-variable('800', 12rem);
+  @include create-space-variable('900', 16rem);
 }
