--- a/src/modules/navbar.scss
+++ b/src/modules/navbar.scss
@@ -8,7 +8,7 @@
   font-size: var(--type-size-300);
   justify-content: stretch;
   min-height: var(--space-600);
-  
+
   &-wrapper {
     background-color: var(--color-primary-b500);
   }
@@ -22,7 +22,7 @@
       flex-direction: column;
     }
 
-    align-items: center;
+    align-items: baseline;
     display: flex;
     flex-direction: row;
     list-style: none;
@@ -38,7 +38,7 @@
       color: var(--color-primary-f300);
 
       &-active {
-        font-weight: bolder;
+        font-weight: bold;
 
         &::after {
           @include responsive-block('mobile') {
@@ -47,7 +47,7 @@
           }
 
           content: '/';
-          font-size: var(--type-size-500);
+          font-size: var(--type-size-400);
           padding-left: var(--space-200);
           padding-right: var(--space-200);
         }
