--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,8 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
-{{ .Content }} {{ end }}
+<div class="article-wrapper">
+  <article class="article">
+    <h1>{{ .Title }}</h1>
+    {{ .Content }} 
+  </article>
+</div>
+{{ end }}
