Add style for new single page markup

--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -8,6 +8,7 @@
   --color-primary-f600: hsl(220, 70%, 98%);
   --color-primary-f700: hsl(220, 75%, 99%);
   --color-accent-b500: hsl(220, 35%, 95%);
+  --color-accent-f300: hsl(220, 10%, 55%);
   --color-accent-f400: hsl(220, 20%, 45%);
   --color-accent-f500: hsl(220, 40%, 25%);
   --color-accent-f600: hsl(220, 50%, 20%);
