--- a/src/theme/screens.scss
+++ b/src/theme/screens.scss
@@ -9,3 +9,9 @@ $screen-widths: (
   'tablet': 550px,
   'desktop': 750px
 );
+
+$text-widths: (
+  'mobile': 100%,
+  'tablet': 420px,
+  'desktop': 420px
+);
