Add posts list page markup and some very basic style

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,11 +1,13 @@
 {{ define "main" }}
 <nav>
-  <ul>
-    {{ range .Pages }}
-    <li>
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
-    </li>
-    {{ end }}
-  </ul>
+  <div class="posts-wrapper">
+    <ul class="posts">
+      {{ range .Pages }}
+      <li>
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
+      </li>
+      {{ end }}
+    </ul>
+  </div>
 </nav>
 {{ end }}
