--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,7 @@
 @import 'modules/article';
 @import 'modules/footer';
 @import 'modules/navbar';
+@import 'modules/post-list';
 
 // Layout
 @import 'layout/container';
