Add css for the new post list markup

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import 'mixins/responsive-block';
 
 // Theme Systemization
+@import 'theme/anchor';
 @import 'theme/screens';
 @import 'theme/spaces';
 @import 'theme/colors';
