--- a/src/modules/post-list.scss
+++ b/src/modules/post-list.scss
@@ -1,7 +1,45 @@
 .posts {
   list-style: none;
   margin: var(--space-500) 0;
+  max-width: 500px;
   padding: 0;
+
+  // Single post
+  &-single {
+    list-style: none;
+    margin-top: var(--space-400);
+    margin-bottom: var(--space-500);
+    padding: 0;
+
+    &-title {
+      a {
+        font-size: var(--type-size-300);
+        font-weight: bold;
+        text-decoration: none;
+      }
+    }
+
+    &-metadata {
+      display: flex;
+      flex-direction: row;
+      font-size: var(--type-size-200);
+      list-style: none;
+      margin: 0;
+      padding: 0;
+
+      &-date {
+        margin-right: var(--space-200);
+      }
+
+      &-tag {
+        color: grey;
+      }
+    }
+
+    &-summary {
+      color: green;
+    }
+  }
 
   &-wrapper {
     @extend %container;
