--- a/src/base/type.scss
+++ b/src/base/type.scss
@@ -1,4 +1,7 @@
 @font-face {
+  font-display: swap;
   font-family: 'Inter';
-  src: url('base/Inter.woff2');
+  font-style: oblique 0deg 10deg;
+  font-weight: 100 900;
+  src: url("base/Inter.woff2?v=3.13") format("woff2-variations");
 }
