Add font weights systemization file

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
 @import 'theme/colors';
 @import 'theme/type';
 @import 'theme/headings';
+@import 'theme/weights';
 
 // Base
 @import 'base/reset';
