Add italics systemization file for font-style degrees

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
 @import 'theme/colors';
 @import 'theme/type';
 @import 'theme/headings';
+@import 'theme/italics';
 @import 'theme/weights';
 
 // Base
