--- a/src/modules/post-list.scss
+++ b/src/modules/post-list.scss
@@ -14,8 +14,8 @@
     &-title {
       a {
         font-size: var(--type-size-300);
-        font-style: oblique 5deg;
-        font-weight: 600;
+        font-style: oblique var(--font-style-200);
+        font-weight: var(--type-weight-500);
         text-decoration: none;
       }
     }
