Make navbar text smaller and add link to homepage

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <nav class='navbar'>
     <ul class='navbar-navigation'>
       <li class='navbar-navigation-item navbar-navigation-item-active'>
-        <a>Site Name</a>
+        <a href={{ .Site.BaseURL }}>Site Name</a>
       </li>
       <li class='navbar-navigation-item navbar-navigation-item-active'>
         Section Name!
