--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@
 
 // Base
 @import 'base/anchor';
+@import 'base/paragraph';
 @import 'base/reset';
 @import 'base/type';
 @import 'base/site';
@@ -23,6 +24,8 @@
 @import 'modules/footer';
 @import 'modules/navbar';
 @import 'modules/post-list';
+@import 'modules/sectionview';
+@import 'modules/section';
 
 // Layout
 @import 'layout/container';
