--- a/src/base/type.scss
+++ b/src/base/type.scss
@@ -3,5 +3,5 @@
   font-family: 'Inter';
   font-style: oblique 0deg 10deg;
   font-weight: 100 900;
-  src: url("base/Inter.woff2?v=3.13") format("woff2-variations");
+  src: url('base/Inter.woff2?v=3.13') format('woff2-variations');
 }
