--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,19 @@
 {{ define "main" }}
 <div class="article-wrapper">
   <article class="article">
-    <h1>{{ .Title }}</h1>
+    <h1 class="article-title">{{ .Title }}</h1>
+    <ul class="article-metadata">
+      <li class="article-metadata-date">
+        {{ .Date.Format "01-02-2006" }}
+      </li>
+      <ul class="article-metadata-categories">
+        {{ range first 2 (.GetTerms "categories") }}
+          <li class="article-metadata-categories-single">
+            <a href="{{ .Permalink }}">{{ .LinkTitle }}</a>
+          </li>
+        {{ end }}
+      </ul>
+    </ul>
     {{ .Content }} 
   </article>
 </div>
