--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
     </li>
     <ul class="section-posts">
       {{ range first 4 .Pages }}
-        <li>
+        <li class="section-posts-single">
           <a href="{{ .Permalink }}">
             {{ .Title }}
           </a>
