--- a/src/modules/section.scss
+++ b/src/modules/section.scss
@@ -4,16 +4,14 @@
   max-width: 400px;
   padding: 0;
 
-  li {
-    margin: var(--space-100) 0;
-  }
-
   &-title {
     a {
       font-size: var(--type-size-300);
       font-weight: var(--type-weight-500);
       text-decoration: none;
+      margin-bottom: 0;
     }
+    margin-bottom: 0;
   }
 
   &-summary {
@@ -27,9 +25,14 @@
     list-style: none;
     margin: 0;
     padding: 0;
+
+    &-single {
+      margin: var(--sapce-200) 0;
+    }
   }
 
   &-all {
+    margin-top: var(--space-100);
     a {
       font-weight: var(--type-weight-500);
     }
