Create flexbox styling for new markup

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@
 @import 'modules/article';
 @import 'modules/footer';
 @import 'modules/navbar';
+@import 'modules/pagewrapper';
 @import 'modules/post-list';
 @import 'modules/sectionview';
 @import 'modules/section';
