--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,10 +5,7 @@
         About
       </h1>
       <p class="footer-about-text">
-        This about section should describe the site / wiki
-        uses and content briefly. Expected to contain at most 
-        three to four sentences. This is the third sentence so
-        we should probably stop here.
+        {{ with .Site.GetPage "/about" }}{{ .Content }}{{ end }}
       </p>
     </section>
     <nav class="footer-navigation">
