Raise height of list and home pages by 1 and single page by 2

--- a/src/modules/post-list.scss
+++ b/src/modules/post-list.scss
@@ -1,6 +1,6 @@
 .posts {
   list-style: none;
-  margin: var(--space-500) 0;
+  margin: var(--space-400) 0 var(--space-500) 0;
   max-width: 500px;
   padding: 0;
 
