--- a/src/modules/section.scss
+++ b/src/modules/section.scss
@@ -1,6 +1,6 @@
 .section {
   list-style: none;
-  margin: var(--space-500) 0;
+  margin: 0 0 var(--space-500) 0;
   max-width: 400px;
   padding: 0;
 
