Refactor pagewrapper to layout folder from modules

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,10 +23,11 @@
 @import 'modules/article';
 @import 'modules/footer';
 @import 'modules/navbar';
-@import 'modules/pagewrapper';
 @import 'modules/post-list';
 @import 'modules/sectionview';
 @import 'modules/section';
 
 // Layout
 @import 'layout/container';
+@import 'layout/pagewrapper';
+
