--- a/src/modules/footer.scss
+++ b/src/modules/footer.scss
@@ -30,6 +30,7 @@
 
     &-title {
       font-size: var(--type-size-300);
+      font-weight: var(--type-weight-400);
       margin-bottom: var(--space-400);
     }
 
@@ -49,12 +50,13 @@
 
     &-title {
       font-size: var(--type-size-300);
+      font-weight: var(--type-weight-400);
       margin-bottom: var(--space-400);
     }
 
     &-list {
       font-size: var(--type-size-200);
-      font-weight: var(--type-weight-600);
+      font-weight: var(--type-weight-400);
       list-style: none;
       margin: 0;
       padding: 0;
@@ -63,10 +65,12 @@
         margin: var(--space-200) 0;
 
         &-active {
-          color: var(--color-primary-f400);
-          font-style: oblique var(--font-style-200);
-          font-weight: var(--type-weight-600);
-          text-decoration: underline;
+          a {
+            color: var(--color-primary-f300);
+            font-style: oblique var(--font-style-200);
+            font-weight: var(--type-weight-400);
+            text-decoration: underline;
+          }
         }
       }
     }
