Remove extra space from navbar section title

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,7 @@
       {{ else if eq .Kind "page" }}
         <li class='navbar-navigation-item navbar-navigation-item-active'>
           <a href="{{ .CurrentSection.Permalink }}">
-            {{ .CurrentSection.Title }}
+            {{- .CurrentSection.Title -}}
           </a>
         </li>
         <li class='navbar-navigation-item'>
