--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,7 +21,7 @@
         </li>
       {{ end }}
     </ul>
-    <li class="section-all">
+    <li class="section-seeall">
       <a href="{{ .Permalink }}">
         see all
       </a>
