Fix class names wrong element in markup

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,8 +12,8 @@
       <h1 class="footer-navigation-title">
         Navigation
       </h1>
-      <ul class="footer-navigation-list footer-navigation-list-item-active">
-        <li class="footer-navigation-list-item">
+      <ul class="footer-navigation-list">
+        <li class="footer-navigation-list-item footer-navigation-list-item-active">
           <a href="{{ .Site.Home.Permalink }}">
             Home
           </a>
