--- a/src/modules/navbar.scss
+++ b/src/modules/navbar.scss
@@ -38,7 +38,7 @@
       color: var(--color-primary-f400);
 
       &-active {
-        a {
+        > a {
           color: var(--color-primary-f400);
           font-weight: var(--type-weight-400);
         }
