--- a/src/modules/post-list.scss
+++ b/src/modules/post-list.scss
@@ -12,7 +12,7 @@
     padding: 0;
 
     &-title {
-      a {
+      > a {
         font-size: var(--type-size-300);
         font-style: oblique var(--font-style-200);
         font-weight: var(--type-weight-500);
@@ -46,7 +46,7 @@
     }
 
     &-summary {
-      p {
+      > p {
         color: var(--color-accent-f500);
         margin-bottom: 0;
         margin-top: var(--space-100);
