--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,35 +1,31 @@
 <footer class="footer">
   <div class="footer-container">
-    <div class="footer-about">
-      {{ with .Site.Params.footer.title }}
-      <h1 class="footer-about-title">
-        {{ . }}
-      </h1>
-      {{ end }}
-      {{ with .Site.Params.footer.text }}
-      <p class="footer-about-text">
-        {{ . }}
-      </p>
-      {{ end }}
-    </div>
+    {{ with .Site.Params.footer.title }}
+    <h1 class="footer-about-title">
+      {{ . }}
+    </h1>
+    {{ end }}
+    {{ with .Site.Params.footer.text }}
+
+    <p class="footer-about-text">
+      {{ . }}
+    </p>
+    {{ end }}  
+
+    <h1 class="footer-navigation-title">
+      Navigation
+    </h1>
     
     <nav class="footer-navigation">
-      <h1 class="footer-navigation-title">
-        Navigation
-      </h1>
-      <ul class="footer-navigation-list">
-        <li class="footer-navigation-list-item footer-navigation-list-item-active">
-          <a href="{{ .Site.Home.Permalink }}">
-            Home
-          </a>
-        </li>
-        <li class="footer-navigation-list-item footer-navigation-list-item-active">
-          <a href="{{ .CurrentSection.Permalink }}">
-            {{ .CurrentSection.Title }}
-          </a>
-        </li>
-        <li class="footer-navigation-list-item">Github</li>
-      </ul>
+      <a href="{{ .Site.Home.Permalink }}" class="footer-navigation-list-item footer-navigation-list-item-active">
+        Home
+      </a>
+      <a href="{{ .CurrentSection.Permalink }}" class="footer-navigation-list-item footer-navigation-list-item-active">
+        {{ .CurrentSection.Title }}
+      </a>
+      <a class="footer-navigation-list-item">
+        Github
+      </a>
     </nav>
   </div>
 </footer>
