Remove active class from footer link (not needed)

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,10 +17,10 @@
     </h1>
 
     <nav class="footer-navigation-links">
-      <a href="{{ .Site.Home.Permalink }}" class="footer-navigation-links-item footer-navigation-links-item-active">
+      <a href="{{ .Site.Home.Permalink }}" class="footer-navigation-links-item">
         Home
       </a>
-      <a href="{{ .CurrentSection.Permalink }}" class="footer-navigation-links-item footer-navigation-links-item-active">
+      <a href="{{ .CurrentSection.Permalink }}" class="footer-navigation-links-item">
         {{ .CurrentSection.Title }}
       </a>
       <a class="footer-navigation-links-item">
