Change 'Github' in footer to div from anchor

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -23,7 +23,7 @@
       <a href="{{ .CurrentSection.Permalink }}" class="footer-navigation-links-item">
         {{ .CurrentSection.Title }}
       </a>
-      <a class="footer-navigation-links-item">
+      <div class="footer-navigation-links-item">
         Github
       </a>
     </nav>
