--- a/src/modules/footer.scss
+++ b/src/modules/footer.scss
@@ -1,6 +1,10 @@
 .footer {
   background-color: var(--color-primary-b500);
   color: var(--color-primary-f400);
+  
+  &-container {
+    @extend %footer-container
+  }
 
   &-about-title {
     font-size: var(--type-size-300);
