--- a/src/layout/container.scss
+++ b/src/layout/container.scss
@@ -17,3 +17,23 @@
     max-width: map-get($screen-widths, 'desktop');
   }
 }
+
+.l-container {
+  @include responsive-block('mobile') {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    max-width: map-get($screen-widths, 'mobile');
+  }
+
+  @include responsive-block('tablet') {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: map-get($screen-widths, 'tablet');
+  }
+
+  @include responsive-block('desktop') {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: map-get($screen-widths, 'desktop');
+  }
+}
