--- a/src/layout/footer-container.scss
+++ b/src/layout/footer-container.scss
@@ -1,4 +1,4 @@
-%footer-container {
+.l-footer-grid {
   @include responsive-block('mobile') {
     grid-template-areas: "about-title"
                          "about-text"
@@ -6,22 +6,10 @@
                          "nav-links";
     grid-template-columns: 1fr;
     justify-items: center;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    max-width: map-get($screen-widths, 'mobile');
-  }
-
-  @include responsive-block('tablet') {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: map-get($screen-widths, 'tablet');
   }
 
   @include responsive-block('desktop') {
     column-gap: var(--space-800);
-    margin-left: auto;
-    margin-right: auto;
-    max-width: map-get($screen-widths, 'desktop');
   }
 
   column-gap: var(--space-900);
