Refactor footer to use new l-footer-grid and l-container

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="footer-container">
+  <div class="l-footer-grid l-container">
     {{ with .Site.Params.footer.title }}
     <h1 class="footer-about-title">
       {{ . }}
