--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="article-wrapper">
+<div class="article-wrapper l-container">
   <article class="article">
     <h1 class="article-title">{{ .Title }}</h1>
     <ul class="article-metadata">
