--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header class='navbar-wrapper'>
-  <nav class='navbar'>
+  <nav class='navbar l-container'>
     <ul class='navbar-navigation'>
       <li class='navbar-navigation-item navbar-navigation-item-active'>
         <a href={{ .Site.BaseURL }}>Home</a>
