Refactor list-page to use new non virtual container

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <nav>
-  <div class="posts-wrapper">
+  <div class="posts-wrapper l-container">
     <ul class="posts">
       {{ range .Pages }}
       <ul class="posts-single">
