Refactor index to use new container

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<nav class="sectionview">
+<nav class="sectionview l-container">
   {{ range .Sections }}
   <ul class="section">
     <li class="section-title">
