Change to new footer-grid name in import

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,5 +28,5 @@
 
 // Layout
 @import 'layout/container';
-@import 'layout/footer-container';
+@import 'layout/footer-grid';
 @import 'layout/pagewrapper';
