Change section-posts-single class name to section-post

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
       {{ .Summary }}
     </p>
     {{ range first 4 .Pages }}
-    <a href="{{ .Permalink }}" class="section-posts-single">
+    <a href="{{ .Permalink }}" class="section-post">
       {{ .Title }}
     </a>
     {{ end }}
