Change class names

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,8 +17,8 @@
         </a>
       </li>
       {{ end }}
-      <li class="section-seeall-wrapper">
-        <a href="{{ .Permalink }}" class="section-seeall">
+      <li class="section-seeall">
+        <a href="{{ .Permalink }}" class="section-seeall-link">
           see all
         </a>
       </li>
