Fix summary max width

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -16,9 +16,9 @@
           {{- .LinkTitle -}}
         </a>
       {{ end }}
-      <p class="posts-single-summary">
+      <div class="posts-single-summary">
         {{ .Summary }}
-      </p>
+      </div>
     </div>
     {{ end }}
   </div>
