--- a/src/modules/section.scss
+++ b/src/modules/section.scss
@@ -1,5 +1,5 @@
 .section {
-  margin: var(--space-400) 0 var(--space-500) 0;
+  margin: 0 0 var(--space-500) 0;
   max-width: 400px;
 
   &-title {
@@ -19,7 +19,7 @@
     margin: 0;
     padding: 0;
   }
-  
+
   &-seeall {
     margin-top: var(--space-100);
 
